...
      ),
    );
  }

    Widget _buildEmailField() {
      return TextField(
        key: const Key('login_email'),
        controller: _emailController,
        keyboardType: TextInputType.emailAddress,
        style: const TextStyle(fontSize: 14, color: Colors.black87),
        decoration: InputDecoration(
          labelText: 'Email',
          hintText: 'Masukkan Email',
...
        ),
      );
    }

  Widget _buildPasswordField() {
  return TextField(
    key: const Key('login_password'),
    controller: _passwordController,
    obscureText: _obscurePassword,
    style: const TextStyle(fontSize: 14, color: Colors.black87),
    decoration: InputDecoration(
      labelText: 'Password',
      hintText: 'Masukkan Password',
...
      height: 50,
      decoration: BoxDecoration(
        color: const Color(0xFF4D55CC),
        borderRadius: BorderRadius.circular(12),
      ),
      child: InkWell(
        key: const Key('login_button'),
        onTap: _login,
        borderRadius: BorderRadius.circular(12),
        splashColor: Colors.white24,
        child: const Center(
          child: Text(
            'Login',
...
